<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/myRouteButton"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/my_routes"
        tools:ignore="AppCompatResource">
    </item>
    <item
        android:id="@+id/viewAllRouteButton"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/view_all_route"
        tools:ignore="AppCompatResource">
    </item>
    <item
        android:id="@+id/signOutButton"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/sign_out"
        tools:ignore="AppCompatResource">
    </item>




</menu>